<resources>
    <string name="app_name">Upgrad Task Sandip</string>
    <string name="action_settings">Settings</string>

    <string name="font_name">varela_round.otf</string>

    <string name="soap_fault">Oops...Some data mismatch!</string>
    <string name="soap_timeout">Oops...May be slow connection!</string>
    <string name="error">Oops...Something went wrong!</string>
    <string name="internet_error">Please check your internet connection!</string>

    <string name="coll_name">Movie Name</string>
    <string name="rating">Rating</string>
    <string name="release">Release Date</string>
    <string name="overview">Overview</string>
</resources>